<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <ProgressBar
            android:id="@+id/progress_bar"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"/>
        <LinearLayout
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@color/white"
                  android:paddingStart="8dp"
                  android:backgroundTint="@color/grey">
        <TextView
            android:id="@+id/title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textSize="40sp"
            android:paddingBottom="8dp"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/category_text_label"
            android:text="@string/category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"/>
        <EditText
            android:id="@+id/category_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/restaurant_hints"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"/>
        <TextView
            android:id="@+id/distance_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_text"
            android:paddingTop="16dp"/>
        <Spinner
            android:id="@+id/distance_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/distances"
            android:minWidth="25dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            >
        </Spinner>
        <TextView
            android:id="@+id/ratings_text_label"
            android:text="@string/rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"/>
        <RatingBar
            android:id="@+id/ratings_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:numStars="5"
            android:stepSize="1.0"/>
        <TextView
            android:id="@+id/price_text_label"
            android:text="@string/price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/one_dollar_sign"
                android:text="$"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>
            <CheckBox
                android:id="@+id/two_dollar_sign"
                android:text="$$"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:checked="true"
                android:paddingRight="5dp"/>
            <CheckBox
                android:id="@+id/three_dollar_sign"
                android:text="$$$"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:checked="true"
                android:paddingRight="5dp"/>
            <CheckBox
                android:id="@+id/four_dollar_sign"
                android:text="$$$$"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:checked="true"
                android:paddingRight="5dp"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/search_button"
        android:text="@string/serach_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_marginBottom="12dp" />
</FrameLayout>